<resources>
    <string name="app_name">Sthenos</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account? Login</string>
    <string name="signuphere">Dont have an account? Sign Up</string>
    <string name="mobility">MOBILITY</string>
    <string name="indoor_exercise">INDOOR EXERCISE</string>
    <string name="outdoor_exercise">OUTDOOR EXERCISE</string>
    <string name="equipment">EQUIPMENT</string>
    <string name="mobility_image">mobility image</string>
    <string name="indoor_image">indoor image</string>
    <string name="outdoor_image">outdoor image</string>
    <string name="equipment_image">equipment image</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="nav_mobility">Mobility</string>
    <string name="nav_indoor_exercise">Indoor exercise</string>
    <string name="nav_outdoor_exercise">Outdoor exercise</string>
    <string name="nav_equipment">Equipment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pushups">PushUps</string>
    <string name="pushups_image_desc">PushUps image</string>
    <string name="plank">Plank</string>
    <string name="plank_image_desc">Plank image</string>
    <string name="upper_body_image_desc">Upper body image</string>
    <string name="upper_body_mobility">Upper body mobility</string>
    <string name="lower_body_image_desc">Lower body Image</string>
    <string name="lower_body_mobility">Lower body mobility</string>
    <string name="weights">Weights</string>
    <string name="weights_image_description">weights Image description</string>
    <string name="abs_image_description">Abs Image description</string>
    <string name="abs">Abs</string>
    <string name="jump_image_description">Jump image description</string>
    <string name="jump">Jump</string>
    <string name="squat_image_description">Squat image description</string>
    <string name="squats">Squats</string>
    <string name="pull_up_image_description">Pull up image description</string>
    <string name="pullups">PullUps</string>
    <string name="cardio_image_description">Cardio image description</string>
    <string name="cardio">Cardio</string>
    <string name="balance_image_description">Balance image description</string>
    <string name="balance">Balance</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="welcome_back">Welcome!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login_image_description">Login image description</string>
    <string name="sign_up_to_start_your_strenght_journey">Sign up to start your strength journey</string>
    <string name="phone_number">Phone Number</string>
    <string name="userprofileimage_descripton">userProfileImage Description</string>
    <string name="longestworkouttimetext">3:00:57</string>
    <string name="longest_workout_time">Longest workout time</string>
    <string name="pb_rep_range">30 dips</string>
    <string name="pb_rep_range_desc">PB rep range</string>
    <string name="update">UPDATE</string>
    <string name="max_rep_count">Max rep count is 30</string>
    <string name="rep_range_randomizer">REP RANGE RANDOMIZER</string>
    <string name="roll">Roll</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="content_description_for_recyclerview">Content description for recyclerview</string>
    <string name="textview">TextView</string>
    <string name="incline_push_up_title">Incline Push-Up</string>
    <string name="content_description_for_collapsing_toolbar_image">Content description for Collapsing toolbar image</string>
    <string name="description">Description</string>
    <string name="level">level</string>
    <string name="muscle_group">Muscle group</string>
    <string name="rep_randomizer">Rep Randomizer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="description_text">Description text</string>
    <string name="muscles_from_the_group">Muscles from the group</string>
    <string name="leveltag">levelTag</string>
    <string name="exercsistitletextview">exercsisTitleTextView</string>
    <string name="home_pull_up_bars">Home Pull Up Bars</string>
    <string name="parallettes">Parallettes</string>
    <string name="resistancebands">Resistancebands</string>
    <string name="weight_vest">Weight vest</string>
    <string name="wrist_wraps">Wrist wraps</string>
    <string name="price">Price</string>
    <string name="pricetag">priceTag</string>
    <string name="rating">Rating</string>
    <string name="ratingTag">4 out of 5 stars</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="notificaton">Notificaton</string>
    <string name="no_alarm_set">No Alarm set</string>
    <string name="open_time_picker">Open time picker</string>
    <string name="cancel_alarm">cancel alarm</string>
    <string name="set_a_reminder_to_get_up_and_move_while_working_to_stay_active">Set a reminder to get up and move while working to stay active!</string>
    <string name="new_task">New Task</string>
    <string name="what_are_you_planning">What are you planning?</string>
    <string name="day_month_year">16/02/2021</string>
    <string name="delete_task">Delete Task</string>
    <string name="save">SAVE</string>
    <string name="task_name">Task Name</string>
    <string name="todo_list">ToDo List</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="tomorrow_s_tasks">Tomorrow\'s Tasks</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="hey">Hey</string>
    <string name="you_are_nfree_today">you are free today</string>
    <string name="you_have_no_task_to_do_today">You have no task to do today</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="todo">TODO</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="cancel_reminder">Cancel Reminder</string>
</resources>