<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarTemplate"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/colapsingToolBarTemplate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


            <ImageView
                android:id="@+id/imageViewForCollapsingToolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_for_collapsing_toolbar_image"
                android:scaleType="centerCrop"
                android:src="@drawable/userprofile"
                app:layout_collapseMode="parallax" />

            <Toolbar
                android:id="@+id/toolBarForCollapsingToolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="30dp"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/exerciseTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/exercsistitletextview"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/levelTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>


            <TextView
                android:id="@+id/levelTagTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/leveltag"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/muscleGroupTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/muscle_group"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/muscleGroupDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/muscles_from_the_group"
                android:textColor="@color/black"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/descriptionTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/descriptionTextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/description_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnRepRandomizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_orange"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/rep_randomizer"
                    android:textColor="@color/white"/>


                <Button
                    android:id="@+id/btnStopWatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_orange"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/stopwatch"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/content_description_for_collapsing_toolbar_image"
        android:focusable="true"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:fabSize="normal"
        app:layout_anchor="@id/AppBarTemplate"
        app:layout_anchorGravity="bottom|end" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_navbar"
        android:layout_margin="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="30dp"
        app:itemRippleColor="@android:color/transparent"
        app:itemIconTint="@drawable/bottom_nav_item_selector"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>